--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -27,9 +27,9 @@ architectures/arm64-v8a=true
 architectures/x86=true
 architectures/x86_64=true
 version/code=1
-version/name=""
-package/unique_name="com.bamford.snakegame"
-package/name="spaceshooter"
+version/name="Space Shooter"
+package/unique_name="com.bamford.spaceshooter"
+package/name="Space Shooter"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
@@ -37,7 +37,7 @@ package/exclude_from_recents=false
 package/show_in_android_tv=false
 package/show_in_app_library=true
 package/show_as_launcher_app=false
-launcher_icons/main_192x192=""
+launcher_icons/main_192x192="res://textures/PNG/playerShip3_red.png"
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
 graphics/opengl_debug=false
